feat: add division handler
